<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp">

        <TextView
            android:id="@+id/loanTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_request_account"
            android:textColor="@color/colorLink"
            android:textSize="@dimen/font_size_17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loanStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_request_account"
            android:textAllCaps="true"
            android:textColor="@color/colorLightGreen"
            android:textSize="@dimen/font_size_15sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelTerm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loan_list_term_label"
            android:textColor="@color/colorMaterialGrey400"
            android:textSize="@dimen/font_size_18sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/labelAmount"
            app:layout_constraintTop_toBottomOf="@id/loanTitle" />

        <TextView
            android:id="@+id/valueTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMaterialGrey800"
            android:textSize="@dimen/font_size_15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelTerm" />

        <TextView
            android:id="@+id/labelAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/loan_list_total_value"
            android:textColor="@color/colorMaterialGrey400"
            android:textSize="@dimen/font_size_18sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/labelTerm"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loanTitle" />

        <TextView
            android:id="@+id/valueAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMaterialGrey800"
            android:textSize="@dimen/font_size_15sp"
            app:layout_constraintLeft_toLeftOf="@id/labelAmount"
            app:layout_constraintTop_toBottomOf="@id/labelAmount" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
